corrected some alignments

--- a/style.css
+++ b/style.css
@@ -158,6 +158,17 @@ pricing section styles
 
 
 /* --------------------
+FAQ section styles
+-----------------------*/
+.FAQ {
+    padding-top: 70px;
+    padding-bottom: 100px;
+
+}
+
+
+
+/* --------------------
 footer section styles
 -----------------------*/
 footer {
